--- a/src/main/webapp/i18n/ko/global.json
+++ b/src/main/webapp/i18n/ko/global.json
@@ -7,6 +7,12 @@
       "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
       "entities": {
         "main": "Entities",
+        "rentalRental": "Rental",
+        "rentalRentedItem": "Rented Item",
+        "rentalOverdueItem": "Overdue Item",
+        "rentalReturnedItem": "Returned Item",
+        "bookBook": "Book",
+        "userUser": "User",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
