--- a/src/main/webapp/i18n/en/rental-rentalStatus.json
+++ b/src/main/webapp/i18n/en/rental-rentalStatus.json
@@ -2,9 +2,8 @@
   "gatewayApp": {
     "RentalStatus": {
       "null": "",
-      "OK": "OK",
-      "RENTED": "RENTED",
-      "OVERDUE": "OVERDUE"
+      "RENT_AVAILABLE": "RENT_AVAILABLE",
+      "RENT_UNAVAILABLE": "RENT_UNAVAILABLE"
     }
   }
 }
