--- a/src/main/webapp/i18n/en/rentalRentedItem.json
+++ b/src/main/webapp/i18n/en/rentalRentedItem.json
@@ -16,6 +16,7 @@
       "bookId": "Book Id",
       "rentedDate": "Rented Date",
       "dueDate": "Due Date",
+      "bookTitle": "Book Title",
       "rental": "Rental"
     }
   },
