--- a/src/main/webapp/i18n/ko/health.json
+++ b/src/main/webapp/i18n/ko/health.json
@@ -11,6 +11,7 @@
       "error": "오류"
     },
     "indicator": {
+      "binders": "Message broker",
       "discoveryComposite": "Discovery Composite",
       "refreshScope": "Microservice Refresh Scope",
       "clientConfigServer": "Microservice Config Server",
