--- a/src/main/webapp/i18n/ko/rental-rentalStatus.json
+++ b/src/main/webapp/i18n/ko/rental-rentalStatus.json
@@ -2,8 +2,9 @@
   "gatewayApp": {
     "RentalStatus": {
       "null": "",
-      "RENT_AVAILABLE": "RENT_AVAILABLE",
-      "RENT_UNAVAILABLE": "RENT_UNAVAILABLE"
+      "OK": "OK",
+      "RENTED": "RENTED",
+      "OVERDUE": "OVERDUE"
     }
   }
 }
