--- a/src/main/webapp/i18n/ko/rentalOverdueItem.json
+++ b/src/main/webapp/i18n/ko/rentalOverdueItem.json
@@ -15,6 +15,7 @@
       },
       "bookId": "Book Id",
       "dueDate": "Due Date",
+      "bookTitle": "Book Title",
       "rental": "Rental"
     }
   },
