--- a/src/main/webapp/i18n/ko/rentalReturnedItem.json
+++ b/src/main/webapp/i18n/ko/rentalReturnedItem.json
@@ -15,6 +15,7 @@
       },
       "bookId": "Book Id",
       "returnedDate": "Returned Date",
+      "bookTitle": "Book Title",
       "rental": "Rental"
     }
   },
