--- a/src/main/webapp/i18n/ko/bookCatalogBookCatalog.json
+++ b/src/main/webapp/i18n/ko/bookCatalogBookCatalog.json
@@ -11,15 +11,16 @@
         "question": "Are you sure you want to delete Book Catalog {{ id }}?"
       },
       "detail": {
-        "title": "Book Catalog"
+        "title": "Book Catalog",
+        "header": "책 세부보정"
       },
-      "title": "Title",
-      "description": "Description",
-      "author": "Author",
-      "publicationDate": "Publication Date",
-      "classification": "Classification",
-      "rented": "Rented",
-      "rentCnt": "Rent Cnt",
+      "title": "제목",
+      "description": "설명",
+      "author": "작가",
+      "publicationDate": "출판 날짜",
+      "classification": "분류",
+      "rented": "대여 여부",
+      "rentCnt": "대여 횟수",
       "bookId": "Book Id"
     }
   },
