--- a/src/main/webapp/i18n/ko/bookCatalogBookCatalog.json
+++ b/src/main/webapp/i18n/ko/bookCatalogBookCatalog.json
@@ -12,7 +12,7 @@
       },
       "detail": {
         "title": "Book Catalog",
-        "header": "책 세부보정"
+        "header": "책 세부정보"
       },
       "title": "제목",
       "description": "설명",
