book management done

--- a/src/main/webapp/i18n/ko/book-location.json
+++ b/src/main/webapp/i18n/ko/book-location.json
@@ -2,8 +2,8 @@
   "gatewayApp": {
     "Location": {
       "null": "",
-      "JEONGJA": "JEONGJA",
-      "PANGYO": "PANGYO"
+      "JEONGJA": "정자동",
+      "PANGYO": "판교"
     }
   }
 }
