--- a/src/main/webapp/i18n/ko/book-bookStatus.json
+++ b/src/main/webapp/i18n/ko/book-bookStatus.json
@@ -2,8 +2,8 @@
   "gatewayApp": {
     "BookStatus": {
       "null": "",
-      "AVAILABLE": "AVAILABLE",
-      "UNAVAILABLE": "UNAVAILABLE"
+      "AVAILABLE": "대여 가능",
+      "UNAVAILABLE": "대여 불가능"
     }
   }
 }
