--- a/src/main/webapp/i18n/ko/global.json
+++ b/src/main/webapp/i18n/ko/global.json
@@ -2,11 +2,15 @@
   "global": {
     "bookrent": "대여하기",
     "title": "Gateway",
+    "overdueBook": "연체처리",
     "browsehappy": "당신은 <strong>오래된</strong> 브라우저를 사용하고 있군요. <a href=\"http://browsehappy.com/?locale=en\">브라우저를 업그레이드</a> 해 당신의 경험을 발전시키세요.",
     "menu": {
       "home": "홈",
+      "rentalManagement": "대여 관리",
       "rentalpage": "도서 대여",
       "registerbook": "도서 등록",
+      "bookManagement": "도서 관리",
+      "manageRented": "대여 도서 관리",
       "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
       "entities": {
         "main": "Entities",
