--- a/src/main/webapp/i18n/ko/rentalOverdueItem.json
+++ b/src/main/webapp/i18n/ko/rentalOverdueItem.json
@@ -14,8 +14,9 @@
         "title": "Overdue Item"
       },
       "bookId": "Book Id",
-      "dueDate": "Due Date",
-      "bookTitle": "Book Title",
+      "rentedDate": "대여 날짜",
+      "dueDate": "반납 예정 날짜",
+      "bookTitle": "도서 이름",
       "rental": "Rental"
     }
   },
