--- a/src/main/webapp/i18n/ko/home.json
+++ b/src/main/webapp/i18n/ko/home.json
@@ -1,7 +1,7 @@
 {
   "home": {
-    "title": "Java Hipster 에 오신 것을 환영합니다!",
-    "subtitle": "이것은 당신의 홈페이지입니다.",
+    "title": "CNAPS 3.0's Library System",
+    "subtitle": "CNAPS 3.0 MSA Sample Project입니다.",
     "logged": {
       "message": "\"{{username}}\"(으)로 로그인하셨습니다."
     },
@@ -14,6 +14,7 @@
       "follow": "트위터에서 @jhipster 에 접속하세요."
     },
     "like": "JHipster 가 마음에 든다면, 별을 주는 것을 잊지 마세요.",
+    "explore": "Source Code를 확인하고 싶다면, CNAPS 3.0의 Github을 방문해주세요!",
     "github": "GitHub"
   }
 }
