modify vue files

--- a/src/main/webapp/i18n/ko/book-source.json
+++ b/src/main/webapp/i18n/ko/book-source.json
@@ -2,8 +2,8 @@
   "gatewayApp": {
     "Source": {
       "null": "",
-      "Donated": "Donated",
-      "Purchased": "Purchased"
+      "Donated": "기부 도서",
+      "Purchased": "구매 도서"
     }
   }
 }
