--- a/src/main/webapp/i18n/ko/global.json
+++ b/src/main/webapp/i18n/ko/global.json
@@ -6,6 +6,7 @@
     "browsehappy": "당신은 <strong>오래된</strong> 브라우저를 사용하고 있군요. <a href=\"http://browsehappy.com/?locale=en\">브라우저를 업그레이드</a> 해 당신의 경험을 발전시키세요.",
     "menu": {
       "home": "홈",
+      "board": "게시판",
       "rentalManagement": "대여 관리",
       "rentalpage": "도서 대여",
       "returnpage": "도서 반납",
@@ -21,8 +22,7 @@
           "return": "반납하기",
           "question": "해당 도서를 반납하시겠습니까?",
           "result": "반납 완료 되었습니다."
-        },
-        "board": "게시판"
+        }
       },
       "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
       "entities": {
