--- a/src/main/webapp/i18n/ko/rentalRentedItem.json
+++ b/src/main/webapp/i18n/ko/rentalRentedItem.json
@@ -19,7 +19,7 @@
         "completed": " 해당 도서 연체 처리가 완료되었습니다. "
       },
       "bookId": "Book Id",
-      "rentedDate": "대여 날짜",
+      "rentedDate": "대출 날짜",
       "dueDate": "반납 예정 날짜",
       "bookTitle": "도서 이름",
       "rental": "Rental"
